@@ -6,7 +6,11 @@
 
 module t;
    Iface ifc();
+   rvlab_tests uut (.ifc);
 
+   always begin
+      uut.test_idcode();
+   end
    initial begin
       #1;
       $write("*-* All Finished *-*\n");
@@ -15,12 +19,19 @@ module t;
 endmodule
 
 interface Iface;
-  int tck;
-  int tdo;
+  logic tck;
+  logic tdo;
 
-  task tsk(input int data_i, output int data_o);
+  task tsk(output logic [31:0] data_o, input logic [31:0] data_i);
      @(posedge tck);
-     data_o <= tdo;
+     data_o[$size(data_i)-1] <= tdo;
   endtask
-
 endinterface
+
+module rvlab_tests (
+   Iface ifc);
+   task test_idcode();
+      bit [31:0] idcode_read;
+      ifc.tsk(idcode_read, '0);
+   endtask
+endmodule
