@@ -61,6 +61,7 @@ Verilator 5.035 devel
 * Fix V3Gate assertion on eliminated circular logic (#5889) (#5898). [Geza Lore]
 * Fix process comparisons (#5896).
 * Fix ccache with clang (#5899). [Geza Lore]
+* Fix delayed assignment malformed LHS assertion (#5904).
 
 
 Verilator 5.034 2025-02-24
